# philippine-machine-translation

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
.github/: dependabot.yml
configs/: config-all.yaml  config-gru-aug-cbk.yaml  config-gru-aug.yaml  config-gru-base.yaml
data/processed/: word_classes.json
data/results/: metrics_summary.csv
data/translations/: aug-cbk.txt  aug.txt  base.txt  test.es  test.src
notebooks/: 00_setup.ipynb  01_preprocessing.ipynb  01a_preprocessing_smt.ipynb  01b_preprocessing_nmt.ipynb  02_feature_engineering.ipynb  02_modeling.ipynb  02a_modeling_smt.ipynb  02b_modeling_nmt.ipynb  02b_modeling_opennmt.ipynb  02c_modeling_cbk.ipynb  02c_modeling_pytorch.ipynb  03_evaluation.ipynb  04_analysis.ipynb  04_evaluation.ipynb  05_conclusion.ipynb  philippine-machine-translation.ipynb
src/: augmentation.py  config.py  filter_parallel_corpus.py  main.py  preprocessing.py  preprocessing_nmt.py  preprocessing_smt.py  utils.py
